# aperio

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  docker-compose.yml  docker-compose.yml.example  install.sh  last_planned_features.md  planned_features.md  rustfmt.toml
.github/workflows/: ci.yml  release-docker.yml  release.yml  rust.yml
aperio-client/: Cargo.toml  Dockerfile  Dockerfile.workflow  README.md  build.rs
aperio-client/src/: bind_tunnels.rs  bind_tunnels_tests.rs  check.rs  check_tests.rs  config.rs  config_tests.rs  dial.rs  e2e.rs  forward.rs  forward_tests.rs  main.rs  main_tests.rs  protocol.rs  protocol_tests.rs  proxy.rs  serve.rs  serve_tests.rs  service.rs  service_tests.rs  tcp.rs  tcp_tests.rs  udp.rs  udp_tests.rs  ws_proxy.rs
aperio-client/src/proxy/: h2.rs  h2_tests.rs  http.rs  http_tests.rs  unix.rs  unix_tests.rs  ws.rs  ws_tests.rs
aperio-config/: Cargo.toml  README.md
aperio-config/src/: lib.rs  lib_tests.rs  main.rs
aperio-config/tests/: cli_tests.rs
aperio-dashboard/: README.md  auth.html  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
aperio-dashboard/e2e/: smoke.spec.ts
aperio-dashboard/scripts/: check-i18n.mjs
aperio-dashboard/src/: App.tsx  AuthApp.tsx  auth.tsx  global.css  index.css  main.tsx  theme.tsx
aperio-dashboard/src/components/: ActivityChart.tsx  AddClientWizard.tsx  AdminKeysSection.tsx  ApiExplorerSection.tsx  AppSidebar.tsx  AuditSection.tsx  BandwidthSection.tsx  CacheStatsSection.tsx  ClientsSection.tsx  CommandPalette.tsx  InboxSection.tsx  InspectorDialog.tsx  LiveTailSection.tsx  MaintenanceSection.tsx  OrgSwitcher.tsx  OrganizationsSection.tsx  PasskeysDialog.tsx  RouteTrendsSection.tsx  SelfHealthSection.tsx  SettingsSection.tsx  ShareLinksSection.tsx  SlowEndpointsSection.tsx  StageStatsSection.tsx  StatsCards.tsx  TailConsole.tsx  TokensSection.tsx  TopologySection.tsx  TotpDialog.tsx  TrafficBreakdownSection.tsx  TrafficHistoryChart.tsx  TrafficSection.tsx  UptimeSection.tsx  UsersSection.tsx  WebhooksSection.tsx  badges.tsx  shared.tsx
aperio-dashboard/src/hooks/: useLiveData.ts  usePoll.ts  useToast.tsx  useTrafficStream.ts
aperio-dashboard/src/i18n/: de.ts  es.ts  fr.ts  index.tsx  ja.ts  ru.ts  tr.ts  zh.ts
aperio-dashboard/src/lib/: api.ts  clientGroups.ts  format.test.ts  format.ts  session.tsx  url.ts  webauthn.ts
aperio-server/: Cargo.toml  Dockerfile  Dockerfile.workflow  README.md  build.rs
aperio-server/benches/: hot_paths.rs
aperio-server/src/: access_log.rs  alerts.rs  alerts_tests.rs  api.rs  api_tests.rs  audit.rs  auth.rs  auth_tests.rs  authentication.html  backup.rs  backup_tests.rs  cache.rs  check_config.rs  check_config_tests.rs  config_file.rs  config_file_tests.rs  dashboard.html  error_pages.rs  error_pages_tests.rs  expose.rs  expose_tests.rs  fallbacks.rs  fallbacks_tests.rs  headers.rs  headers_tests.rs  main.rs  main_tests.rs  oidc.rs  oidc_tests.rs  print_config.rs  print_config_tests.rs  protocol.rs  protocol_tests.rs  proxy.rs  proxy_tests.rs  redact.rs  retention.rs  retention_tests.rs  route_limits.rs  route_limits_tests.rs  (+26 more)
aperio-server/src/api/: admin_keys.rs  admin_keys_tests.rs  clients.rs  clients_tests.rs  export.rs  export_tests.rs  inbox.rs  inbox_tests.rs  inspector.rs  inspector_tests.rs  maintenance.rs  maintenance_tests.rs  metrics.rs  metrics_tests.rs  observe.rs  observe_tests.rs  openapi.rs  orgs.rs  orgs_tests.rs  purge.rs  purge_tests.rs  settings.rs  settings_tests.rs  tokens.rs  tokens_tests.rs  topology.rs  tunnels.rs  tunnels_tests.rs  users.rs  users_tests.rs  webhooks.rs  webhooks_tests.rs
aperio-server/src/proxy/: ws.rs  ws_tests.rs
aperio-server/src/store/: admin_keys.rs  audit.rs  audit_tests.rs  inbox.rs  orgs.rs  orgs_tests.rs  sessions.rs  sessions_tests.rs  stats.rs  tokens.rs  uptime.rs  users.rs  webhooks.rs
aperio-server/src/tunnel/: tcp.rs  tcp_tests.rs  ws.rs  ws_tests.rs
aperio-tunnel-action/: README.md  action.yml  main.js  post.js
docs/: README.md  architecture.md  caching.md  client-resilience.md  configuration.md  dashboard.md  development.md  emergency-tunnels.md  ephemeral-tunnels.md  failover.md  getting-started.md  observability.md  organizations.md  performance-tuning.md  production-hardening.md  routing-and-load-balancing.md  share-links.md  threat-model.md  tokens-and-auth.md  tunnel-protocol.md  upgrade-guide.md
docs/examples/: README.md
docs/examples/allowed_ips/: README.md
docs/examples/behind_proxy/: README.md
docs/examples/cache/: README.md  aperio-server.yaml
docs/examples/emergency_tunnels/: aperio-binder.yaml  aperio-server.yaml  aperio.yaml
docs/examples/failover/: README.md  aperio-server.yaml  aperio.yaml
docs/examples/grpc/: README.md  aperio.yaml
docs/examples/headers/: README.md
docs/examples/health_check/: aperio.yaml
docs/examples/load_balancing/: README.md  aperio-server.yaml
docs/examples/load_balancing_2/: aperio.yaml
docs/examples/m_allowed_ips/: README.md  aperio-server.yaml  aperio.yaml
docs/examples/m_cache/: README.md  aperio-server.yaml  aperio.yaml
docs/examples/m_grpc/: README.md  aperio-server.yaml  aperio.yaml
docs/examples/m_headers/: README.md  aperio-server.yaml  aperio.yaml
docs/examples/m_health_check/: README.md  aperio-server.yaml  aperio.yaml
docs/examples/m_load_balancing/: README.md  aperio-server.yaml  aperio.yaml
docs/examples/m_resilience/: README.md  aperio-server.yaml  aperio.yaml
docs/examples/m_services/: README.md  aperio.yaml
docs/examples/m_static_site/: README.md  aperio-server.yaml  (+1 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: binary_frame.rs  tunnel_message.rs
tests/: README.md  e2e.sh  soak.js
tests/lib/: harness.sh
tests/mock-h2/: Cargo.toml
tests/mock-h2/src/: main.rs
tests/phases/: a-base.sh  b-auth.sh  c-failover.sh  d-lb.sh  e-features.sh  f-ws.sh  g-tunnels.sh  h-subdomain.sh  i-h2.sh  j-sessions.sh  k-cache.sh  l-health.sh  m-multihost.sh  n-config.sh
(+72 files in other folders)
