[package]
name = "aperio-client"
version = "0.1.3"
edition = "2024"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
uuid = { version = "1.8", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
futures-util = "0.3"
url = "2.5"
flate2 = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive", "wrap_help"] }
aperio-config = { path = "../aperio-config" }
# End-to-end encryption of emergency tunnels (X25519 + ChaCha20-Poly1305).
x25519-dalek = "2"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }

# Used by build.rs to emit the aperio.yaml JSON Schema into schemas/.
[build-dependencies]
aperio-config = { path = "../aperio-config" }
