[package]
name = "aperio-client"
version = "0.3.0"
edition = "2024"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
uuid = { version = "1.8", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
futures-util = "0.3"
url = "2.5"
flate2 = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive", "wrap_help"] }
aperio-config = { path = "../aperio-config" }
# End-to-end encryption of emergency tunnels (X25519 + ChaCha20-Poly1305).
x25519-dalek = "2"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
hyper = { version = "1.10.1", features = ["client", "server", "http1", "http2"] }
hyper-util = { version = "0.1.20", features = ["client-legacy", "http2", "tokio"] }
http-body-util = "0.1.3"
hyper-rustls = { version = "0.27.9", default-features = false, features = ["http2", "webpki-roots", "ring"] }
bytes = "1.12.1"
# MIME types for the static file serving mode (--serve).
mime_guess = "2"

# Used by build.rs to emit the aperio.yaml JSON Schema into schemas/.
[build-dependencies]
aperio-config = { path = "../aperio-config" }
