[package]
name = "aperio-config"
version = "0.2.2"
edition = "2024"

# Shared schema of the client `aperio.yaml` file. Kept as its own crate so the
# aperio-client build script can derive a JSON Schema from the exact same types
# the client parses with — no drift between the parser and the editor schema.

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1"
