[package]
name = "aperio-server"
version = "0.2.0"
edition = "2024"

[dependencies]
rust-embed = "8"
mime_guess = "2"
tokio = { version = "1.38", features = ["full"] }
axum = { version = "0.7.5", features = ["ws", "http2"] }
http-body-util = "0.1"
tower-http = { version = "0.5.2", features = ["trace", "cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
uuid = { version = "1.8", features = ["v4"] }
subtle = "2"
sha2 = "0.10"
hmac = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
futures-util = "0.3"
chrono = "0.4"
# Single-file persistent store (tokens/webhooks/stats/users) at <data_dir>/aperio.db.
rusqlite = { version = "0.32", features = ["bundled"] }
# Password hashing for dashboard users.
argon2 = "0.5"
# OpenAPI spec generation for the admin API (/aperio/api/openapi.json).
utoipa = { version = "5", features = ["axum_extras"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2.5"
flate2 = "1"
# OpenTelemetry OTLP trace export (opt-in via APERIO_OTEL). Uses the HTTP/protobuf
# exporter over reqwest+rustls to reuse the existing TLS stack (no tonic/openssl).
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32", default-features = false, features = [
  "trace",
  "http-proto",
  "reqwest-client",
  "reqwest-rustls",
] }
tracing-opentelemetry = "0.33"
opentelemetry-semantic-conventions = "0.32"
sha1 = "0.10"
http-body = "1"
