[package]
name = "aperio-server"
version = "0.4.2"
edition = "2024"

[dependencies]
rust-embed = "8"
# Only present to expose the `vendored` switch of the openssl that
# webauthn-rs already pulls in: the release workflow compiles OpenSSL from
# source (feature `vendored-openssl` below) so cross-compiled and
# musl-static targets don't need a system OpenSSL for the build target.
openssl = { version = "0.10", optional = true }
mime_guess = "2"
tokio = { version = "1.38", features = ["full"] }
axum = { version = "0.7.5", features = ["ws", "http2"] }
http-body-util = "0.1"
tower-http = { version = "0.5.2", features = ["trace", "cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# The optional aperio-server.yaml config file (same crate the client uses).
serde_yaml = "0.9"
# Shared config schema: `--print-schema` emits the aperio-server.yaml JSON schema.
aperio-config = { path = "../aperio-config" }
base64 = "0.22"
uuid = { version = "1.8", features = ["v4"] }
subtle = "2"
sha2 = "0.10"
hmac = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
futures-util = "0.3"
chrono = "0.4"
# Single-file persistent store (tokens/webhooks/stats/users) at <data_dir>/aperio.db.
rusqlite = { version = "0.32", features = ["bundled"] }
# Password hashing for dashboard users.
argon2 = "0.5"
# OpenAPI spec generation for the admin API (/aperio/api/openapi.json).
utoipa = { version = "5", features = ["axum_extras"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2.5"
flate2 = "1"
# OpenTelemetry OTLP trace export (opt-in via APERIO_OTEL). Uses the HTTP/protobuf
# exporter over reqwest+rustls to reuse the existing TLS stack (no tonic/openssl).
# NOTE 1: we use otlp's `reqwest-blocking-client`, NOT `reqwest-client` (async).
# The batch span processor drives the exporter from its own dedicated OS thread
# with no Tokio runtime; the async reqwest client panics there ("there is no
# reactor running") the moment a real span is exported, so nothing ever reaches
# the collector. The blocking client owns an internal runtime and exports fine
# from that thread.
# NOTE 2: we deliberately do NOT enable otlp's `reqwest-rustls` feature — on
# reqwest 0.13 that resolves to the aws-lc-rs crypto provider, a heavy C/asm
# build (aws-lc-sys) that dominates the Windows release build. Instead the
# `reqwest_otlp` edge below pins reqwest's `rustls-no-provider`, which reuses the
# process-wide ring CryptoProvider we install at startup (see main.rs) and the
# same rustls-platform-verifier roots — no second crypto backend gets compiled.
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32", default-features = false, features = [
  "trace",
  "http-proto",
  "reqwest-blocking-client",
] }
# Feature-unification-only dependency: forces the reqwest 0.13 that
# opentelemetry-otlp pulls onto `rustls-no-provider` (ring, not aws-lc-rs) and
# the blocking client. Not referenced from code — opentelemetry-otlp owns it.
reqwest_otlp = { package = "reqwest", version = "0.13", default-features = false, features = ["rustls-no-provider", "blocking"] }
tracing-opentelemetry = "0.33"
opentelemetry-semantic-conventions = "0.32"
sha1 = "0.10"
http-body = "1"
webauthn-rs = { version = "0.5.5", features = ["conditional-ui"] }
regex = "1.13.0"
socket2 = "0.6.4"

[features]
# Used by the release workflow: build OpenSSL from source for the target
# instead of probing the host system (cross-compilation, musl static).
vendored-openssl = ["dep:openssl", "openssl/vendored"]

[dev-dependencies]
criterion = "0.8.2"
# Software WebAuthn authenticator (SoftPasskey) to drive full register /
# authenticate ceremonies in webauthn.rs unit tests. Pinned to 0.5.5 so it
# resolves the same webauthn-rs-proto as webauthn-rs (credential types unify).
webauthn-authenticator-rs = { version = "=0.5.5", features = ["softpasskey"] }
# In-process WebSocket client to drive the tunnel handshake in ws/tcp tests.
tokio-tungstenite = "0.24"

[[bench]]
name = "hot_paths"
harness = false
