# E2E test helper: a minimal HTTP/2 cleartext (h2c) echo backend with gRPC
# style response trailers, plus a prior-knowledge h2c client that prints
# status, body, and trailers — used by tests/e2e.sh to exercise the h2c://
# target path end to end. Never published or shipped.
[package]
name = "mock-h2"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
bytes = "1"
futures-util = { version = "0.3", default-features = false }
http-body-util = "0.1"
hyper = { version = "1", features = ["server", "client", "http2"] }
hyper-util = { version = "0.1", features = ["server", "client-legacy", "http2", "tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "io-util"] }
